# haskell-game-of-life

./: Conway.cabal  README  README.md  stack.yaml
src/: Main.hs
