Name:           Conway
Version:        0.0
Cabal-Version:  >= 1.8
License:        BSD3
Author:         Geoff Hulette
Synopsis:       Conway's game of Life
Build-Type:     Simple

Library
  Hs-Source-Dirs: Library
  Build-Depends: 	base >= 4
                , array
                , random
                , GLUT
                , OpenGL
  exposed-modules: Conway
                   Graphics
                   World

Executable conway
  Main-Is:        Main.hs
  Hs-Source-Dirs: src
  Build-Depends:	base >= 4
                , array
                , random
                , GLUT
                , OpenGL
                , Conway
  GHC-Options: -O2
